# TinyTaskManager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
Application/: application.cpp  application.h  help_helper.h  menu_error_hooks.cpp  menu_hook_add.cpp  menu_hook_delete.cpp  menu_hook_exit.cpp  menu_hook_filters.cpp  menu_hook_help.cpp  menu_hook_list.cpp  menu_hook_loadstore.cpp  menu_hooks.cpp  menu_hooks.h  menu_install.cpp  menu_install.h  option.cpp  option.h  task_selector.cpp  task_selector.h
Core/: Task.cpp  Task.h  TaskExceptions.h  TaskFilters.cpp  TaskFilters.h  TaskLists.cpp  TaskLists.h  TaskViews.cpp  TaskViews.h  Types.h
Core/parser_machine/: command.cpp  command.h  parse_command.cpp  parse_command.h  parse_exceptions.h
Core/serilazations/: task_serial.cpp  task_serial.h
Documentations/html/: IOBaseDriver_8h.html  IOBaseDriver_8h.js  IOBaseDriver_8h_source.html  IOFrontEnd_8h_source.html  TaskExceptions_8h.html  TaskExceptions_8h.js  TaskExceptions_8h_source.html  TaskFilters_8h.html  TaskFilters_8h.js  TaskFilters_8h_source.html  TaskLists_8h.html  TaskLists_8h.js  TaskLists_8h_source.html  TaskMenu_8h.html  TaskMenu_8h.js  TaskMenu_8h_source.html  TaskViews_8h_source.html  Task_8h.html  Task_8h.js  Task_8h_source.html  Types_8h_source.html  annotated.html  annotated_dup.js  application_8h.html  application_8h.js  application_8h_source.html  basic__filters_8cpp.html  basic__show_8cpp.html  classBuildException-members.html  classBuildException.html  classBuildTaskNameEmpty-members.html  classBuildTaskNameEmpty.html  classInvalidKeyException-members.html  classInvalidKeyException.html  classLoadException-members.html  classLoadException.html  classLoadStoreException-members.html  classLoadStoreException.html  classStoreException-members.html  classStoreException.html  (+407 more)
Documentations/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1d.js  all_2.js  all_20.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+37 more)
Documentations/latex/: IOBaseDriver_8h.tex  IOBaseDriver_8h_source.tex  IOFrontEnd_8h_source.tex  TaskExceptions_8h.tex  TaskExceptions_8h_source.tex  TaskFilters_8h.tex  TaskFilters_8h_source.tex  TaskLists_8h.tex  TaskLists_8h_source.tex  TaskMenu_8h.tex  TaskMenu_8h_source.tex  TaskViews_8h_source.tex  Task_8h.tex  Task_8h_source.tex  Types_8h_source.tex  annotated.tex  application_8h.tex  application_8h_source.tex  basic__filters_8cpp.tex  basic__show_8cpp.tex  classBuildException.eps  classBuildException.tex  classBuildTaskNameEmpty.eps  classBuildTaskNameEmpty.tex  classInvalidKeyException.eps  classInvalidKeyException.tex  classLoadException.eps  classLoadException.tex  classLoadStoreException.eps  classLoadStoreException.tex  classStoreException.eps  classStoreException.tex  classTask.tex  classTaskLists.tex  classTask_1_1TaskBuilder.tex  classTasksListView.tex  classTinyTaskManagerApplication.tex  class__helper_8h_source.tex  classbasic__json.tex  classbyte__container__with__subtype.tex  (+226 more)
IO/: IOBaseDriver.h
IO/file_io/: fileio.h
IO/interative_io/: IOFrontEnd.h
Tools/: class_helper.h  format_time.cpp  format_time.h  uuid_generator.cpp  uuid_generator.h
Ui/: TaskMenu.cpp  TaskMenu.h
configures/: timezone.h.in
examples/: CMakeLists.txt  basic_filters.cpp  basic_show.cpp
test/: CMakeLists.txt  test_baseio.cpp  test_list.cpp  test_normal.cpp  test_parse.cpp  test_serialization.cpp
