add_executable(test_runner test_normal.cpp)
add_executable(test_runner2 test_list.cpp)
target_link_libraries(test_runner PRIVATE tasklib)
target_link_libraries(test_runner2 PRIVATE tasklib)
enable_testing()
add_test(NAME RunTaskTests COMMAND test_runner)
add_test(NAME RunListTests COMMAND test_runner2)
